# smooth-attn

./: .gitignore  LICENSE  README.md  pyproject.toml  train_e2e.py  train_e2e_full.py  train_e2e_full_results.txt  train_e2e_tank.py  train_long_ctx.py  train_long_ctx_ctx1024_flat_exact.txt  train_long_ctx_results.txt  train_long_ctx_v2.py  train_tank_results.txt  train_tank_v2.txt  triton_kernel.py
benchmarks/: causal_benchmark.py
examples/: mini_attention.py
experiments/formula_evolution/: README.md  search.py
experiments/long_context/: sweep_long_ctx.py  sweep_long_ctx_invented.py  train_long_ctx.py  train_long_ctx_v2.py
experiments/mutation_showdown/: README.md  benchmark.py
experiments/training/: train_e2e.py  train_e2e_full.py  train_e2e_tank.py
results/: README.md
results/long_context/: sweep_long_ctx_invented_results.txt  sweep_long_ctx_results.txt  train_long_ctx_v2_results.txt
results/training/: train_e2e_results.txt
src/smooth_attn/: __init__.py  __main__.py  kernels.py
tests/: bench_backward.py  bench_backward_apples.py  bench_backward_detail.py  bench_backward_overhead.py  bench_flash.py  bench_fp8_kernel.py  bench_kernels_direct.py  bench_vs_softmax.py  test_family_config.py  test_fp8_dot.py  test_fp8_flash.py  test_paged_attention.py  test_paged_long_context.py  test_rope_proj.py  test_training_api.py
