[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "smooth-attn"
version = "0.1.0"
description = "Triton kernels for smooth squareplus causal attention normalization."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "smooth-attn contributors" },
]
keywords = ["attention", "triton", "pytorch", "cuda", "softmax", "transformers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.5",
  "triton>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
smooth-attn = "smooth_attn.kernels:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smooth_attn"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
